--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Deploy Vite to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
 
 permissions:
   contents: read
@@ -16,22 +16,25 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend   # ✅ IMPORTANT: change si ton dossier s'appelle autrement
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
-          cache-dependency-path: frontend/package-lock.json
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json # ✅ adapte si besoin
 
       - name: Install dependencies
         run: npm ci
-        working-directory: frontend
 
-      - name: Build frontend
+      - name: Build (Vite)
         run: npm run build
-        working-directory: frontend
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
@@ -39,11 +42,8 @@ jobs:
           path: frontend/dist
 
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - id: deployment
+      - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
