add schemasql for deploy

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
     "name": "planning-prathnancy-backend",
     "version": "1.0.0",
-    "type": "module",
     "main": "src/server.js",
     "scripts": {
-        "dev": "node --watch src/server.js"
+        "dev": "node --watch src/server.js",
+        "start": "node src/server.js"
     },
     "dependencies": {
         "cors": "^2.8.5",
