Set VITE_API_URL in production build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,8 @@ jobs:
 
       - name: Build (Vite)
         run: npm run build
+        env:
+          VITE_API_URL: https://planning-prathnancy-backend.onrender.com
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
